--- a/lor-deck-viewer/public/index.html
+++ b/lor-deck-viewer/public/index.html
@@ -11,8 +11,14 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Wizracc's Doodler</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://kit.fontawesome.com/514a656f17.js" crossorigin="anonymous"></script>
+
   </head>
-  <body>
+  <body style="background-color: grey; margin: 0;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
