--- a/lor-deck-viewer/public/index.html
+++ b/lor-deck-viewer/public/index.html
@@ -15,10 +15,21 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/514a656f17.js" crossorigin="anonymous"></script>
 
+    <!--Import Google Icon Font-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!-- Compiled and minified CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css"
+    />
   </head>
-  <body style="background-color: grey; margin: 0;">
+  <body
+    style="background: linear-gradient(90deg, #020024 0%, #030353 50%, #020024 100%); margin: 0;"
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
