--- a/lor-deck-viewer/public/index.html
+++ b/lor-deck-viewer/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="For Legends of Runeterra deck codes"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Wizracc's Doodler</title>
+    <title>Wizracc's Deck Viewer</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
